--- a/Sol_Almacen.Presentacion/Sol_Almacen.Presentacion.csproj
+++ b/Sol_Almacen.Presentacion/Sol_Almacen.Presentacion.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Frm_Marcas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Marcas.Designer.cs">
+      <DependentUpon>Frm_Marcas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_Grupos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Frm_Marcas.resx">
+      <DependentUpon>Frm_Marcas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frm_Grupos.resx">
       <DependentUpon>Frm_Grupos.cs</DependentUpon>
     </EmbeddedResource>
