--- a/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
+++ b/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="D_Grupos.cs" />
+    <Compile Include="D_Marcas.cs" />
     <Compile Include="D_Rubros.cs" />
     <Compile Include="D_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
