--- a/Sol_Almacen.Entidades/Sol_Almacen.Entidades.csproj
+++ b/Sol_Almacen.Entidades/Sol_Almacen.Entidades.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="E_Grupos.cs" />
+    <Compile Include="E_Marcas.cs" />
     <Compile Include="E_Rubros.cs" />
     <Compile Include="E_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
