--- a/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
+++ b/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="D_Grupos.cs" />
     <Compile Include="D_Marcas.cs" />
     <Compile Include="D_Rubros.cs" />
+    <Compile Include="D_SubGrupos.cs" />
     <Compile Include="D_Unidades_Medidas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
