--- a/Sol_Almacen.Negocio/Sol_Almacen.Negocio.csproj
+++ b/Sol_Almacen.Negocio/Sol_Almacen.Negocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="N_Almacenes.cs" />
     <Compile Include="N_Grupos.cs" />
     <Compile Include="N_Marcas.cs" />
     <Compile Include="N_Rubros.cs" />
