--- a/Sol_Almacen.Presentacion/Sol_Almacen.Presentacion.csproj
+++ b/Sol_Almacen.Presentacion/Sol_Almacen.Presentacion.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Frm_Almacenes.Designer.cs">
       <DependentUpon>Frm_Almacenes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Frm_Articulos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frm_Articulos.Designer.cs">
+      <DependentUpon>Frm_Articulos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frm_SubGrupos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Frm_Almacenes.resx">
       <DependentUpon>Frm_Almacenes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frm_Articulos.resx">
+      <DependentUpon>Frm_Articulos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Frm_SubGrupos.resx">
       <DependentUpon>Frm_SubGrupos.cs</DependentUpon>
