--- a/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
+++ b/Sol_Almacen.Datos/Sol_Almacen.Datos.csproj
@@ -46,6 +46,7 @@
     <Compile Include="D_Articulos.cs" />
     <Compile Include="D_Grupos.cs" />
     <Compile Include="D_Marcas.cs" />
+    <Compile Include="D_Proveedores.cs" />
     <Compile Include="D_Rubros.cs" />
     <Compile Include="D_SubGrupos.cs" />
     <Compile Include="D_Unidades_Medidas.cs" />
