--- a/Sol_Almacen.Entidades/Sol_Almacen.Entidades.csproj
+++ b/Sol_Almacen.Entidades/Sol_Almacen.Entidades.csproj
@@ -45,6 +45,7 @@
     <Compile Include="E_Articulos.cs" />
     <Compile Include="E_Grupos.cs" />
     <Compile Include="E_Marcas.cs" />
+    <Compile Include="E_Proveedores.cs" />
     <Compile Include="E_Rubros.cs" />
     <Compile Include="E_SubGrupos.cs" />
     <Compile Include="E_Unidades_Medidas.cs" />
